@@ -1,2 +1,3 @@
 [api-description]
 muppet_gui_show_message=: Show a message now. See readme for usage.
+muppet_gui_remove_message=: Removes a message now. See readme for usage.
