@@ -2,12 +2,13 @@
 Version: 20.0.4
 Date: 2020-10-XXXXX
   Features:
-    - Added remote interface to add Gui text in addition to the Factorio command.
+    - Added remote interface to add Gui text in addition to the existing Factorio command.
     - Added optional `transparent`, `contentInnerLight`, `brightRed`, `brightGreen` and `brightYellow` background option. Defaults to main Factorio grey color.
     - Added optional close button color option to be either white or black. Defaults to white.
     - Added `aboveCenter` and `belowCenter` values for the `position` option. These are offsets from the center of the screen by about 1/3 screen height.
     - Added `timer` functionality and option group. Support counting up/down from a starting value, and displaying the number in a given max time unit. Display as either just seconds or minutes:seconds.
     - Added large text size of `huge`, `massive` and `gigantic`. Actual font sizes of all are in readme.
+    - Added remote interface to remove a message. The add message remote interface returns the created messageId for use when removing it.
   Changes:
     - Custom colors renamed to be camel cased; only colors affected are `lightred` to `lightRed`, and `guiHeadingColor` to `guiHeadingColor`. The standard color names in the list remain all lower cased as they were before. `lightred` was in example text in readme previously.
     - Small text gets a smaller x close button so the GUI background isn't expanded just for it.
